# disinherit

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: disinherit.py  remove_inherited_attributes.py
