[project]
name = "remove_inherited_attributes"
version = "1.0"
description = "Remove inherited attributes from a class"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Daniel Hodczak", email = "dhodcz2@uic.edu" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
repository = "https://github.com/dhodcz2/remove_inherited_attributes"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 42",
    "wheel",
]

